--- a/Public/index.html
+++ b/Public/index.html
@@ -10,16 +10,62 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
+    <div id="header">
+      <!--Making a nav bar-->
+      <nav>
+        <a class="company">GRE</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a>Buy</a>
+          </li>
+          <li class="nav-item">
+            <a>Rent</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
+    <div id="splash">
+      <h1>Welcome to the future of home buying</h1>
+      <div>
+        <ul class="search-buttons">
+          <li class="nav-item">
+            <a>Buy</a>
+          </li>
+          <li class="nav-item">
+            <a>Rent</a>
+          </li>
+        </ul>
+      </div>
+      <div id="searchBar">
+        <!--Implement a search bar here-->
+        <p>Statesboro, GA</p>
+        <!--This will be placeholder text in the search bar-->
+      </div>
+    </div>
+
+    <div id="cityCards">
+      <h2>Explore homes on Gata Real Estate</h2>
+      <ul class="cards">
+        <li>Statesboro, GA</li>
+        <li>Atlanta, GA</li>
+      </ul>
+    </div>
+
+    <div id="recentHomes">
+      <h2>Newly listed homes in Statesboro</h2>
+      <ul class="cards">
+        <li>200,000</li>
+        <li>80,000</li>
+      </ul>
+    </div>
+
+    <div id="footer">
+      <p>Copyright 2023 Gata Real Estate</p>
+    </div>
     <script src="" async defer></script>
   </body>
 </html>
