Started work on the splash div

--- a/Public/index.html
+++ b/Public/index.html
@@ -15,48 +15,49 @@
   <body>
     <div id="header">
       <!--Making a nav bar-->
-      <nav>
-        <a class="company">GRE</a>
+      <nav class="navbar">
+        <a class="company" href="#header">GRE</a>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a>Buy</a>
+            <a href="#buy">Buy</a>
           </li>
           <li class="nav-item">
-            <a>Rent</a>
+            <a href="#rent">Rent</a>
           </li>
         </ul>
       </nav>
     </div>
 
     <div id="splash">
-      <h1>Welcome to the future of home buying</h1>
+      <h1 class="title center">Welcome to the future of home buying</h1>
       <div>
-        <ul class="search-buttons">
+        <ul class="search-buttons center">
+          <!--TODO Turn these into actual buttons-->
           <li class="nav-item">
-            <a>Buy</a>
+            <a href="#buy">Buy</a>
           </li>
           <li class="nav-item">
-            <a>Rent</a>
+            <a href="#rent">Rent</a>
           </li>
         </ul>
       </div>
-      <div id="searchBar">
-        <!--Implement a search bar here-->
-        <p>Statesboro, GA</p>
-        <!--This will be placeholder text in the search bar-->
+      <div id="searchBar" class="center">
+        <input type="text" placeholder="Statesboro, GA" />
       </div>
     </div>
 
+    <!--TODO Make this a div with cards for each city-->
     <div id="cityCards">
-      <h2>Explore homes on Gata Real Estate</h2>
+      <h2 class="center">Explore homes on Gata Real Estate</h2>
       <ul class="cards">
         <li>Statesboro, GA</li>
         <li>Atlanta, GA</li>
       </ul>
     </div>
 
+    <!--TODO Make this a div with cards for each house-->
     <div id="recentHomes">
-      <h2>Newly listed homes in Statesboro</h2>
+      <h2 class="center">Newly listed homes in Statesboro</h2>
       <ul class="cards">
         <li>200,000</li>
         <li>80,000</li>
@@ -64,8 +65,8 @@
     </div>
 
     <div id="footer">
-      <p>Copyright 2023 Gata Real Estate</p>
+      <p class="center">Copyright 2023 Gata Real Estate</p>
     </div>
-    <script src="" async defer></script>
+    <script src="/src/App.js" async defer></script>
   </body>
 </html>
