--- a/Public/index.html
+++ b/Public/index.html
@@ -13,18 +13,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="header">
+    <!--TODO Make the cards into <a> buttons-->
+    <div id="header" class="container">
       <!--Making a nav bar-->
       <nav class="navbar">
-        <a class="company" href="#header">GRE</a>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="#buy">Buy</a>
-          </li>
-          <li class="nav-item">
-            <a href="#rent">Rent</a>
-          </li>
-        </ul>
+        <div class="company">
+          <a class="" href="#header">GRE</a>
+        </div>
+        <div class="search-buttons">
+          <div class="button">
+            <a href="">Buy</a>
+          </div>
+          <div class="button">
+            <a href="">Rent</a>
+          </div>
+        </div>
       </nav>
     </div>
 
@@ -39,6 +42,7 @@
         </div>
       </div>
       <div id="searchBar" class="">
+        <!--TODO If anything other than Statesboro or Atlanta is searched send to error page-->
         <input type="text" placeholder="Statesboro, GA" />
       </div>
     </div>
@@ -66,17 +70,80 @@
       </div>
     </div>
 
-    <!--TODO Make this a div with cards for each house-->
     <div id="recentHomes" class="container">
       <h2 class="">Newly listed homes in Statesboro</h2>
-      <ul class="cards">
-        <li>200,000</li>
-        <li>80,000</li>
-      </ul>
+      <div class="cards">
+        <div id="house1" class="house-card">
+          <div class="card">
+            <div>
+              <h3><b>NEW - 2 DAYS AGO</b></h3>
+            </div>
+          </div>
+          <div class="bottom-info">
+            <div class="price">
+              <p><b>$399,900</b></p>
+            </div>
+            <div class="info">
+              <div class="info-details">
+                <img src="./images/BedIcon.svg" alt="#" />
+                <p>4bd</p>
+              </div>
+              <div class="info-details">
+                <img src="./images/BathIcon.svg" alt="a" />
+                <p>4ba</p>
+              </div>
+              <div class="info-details">
+                <img src="./images/SquareFeetIcon.svg" alt="s" />
+                <p>1,683 sqft</p>
+              </div>
+            </div>
+            <div class="address">
+              <p>0000 Mill Creek Rd,</p>
+              <p>Statesboro, GA 30461</p>
+            </div>
+            <div class="realtor">
+              <p>Gata Real Estate,MLS#20155727</p>
+            </div>
+          </div>
+        </div>
+        <div id="house2" class="house-card">
+          <div class="card">
+            <div>
+              <h3><b>NEW - 4 HRS AGO</b></h3>
+            </div>
+          </div>
+          <div class="bottom-info">
+            <div class="price">
+              <p><b>$399,900</b></p>
+            </div>
+            <div class="info">
+              <div class="info-details">
+                <img src="./images/BedIcon.svg" alt="#" />
+                <p>4bd</p>
+              </div>
+              <div class="info-details">
+                <img src="./images/BathIcon.svg" alt="a" />
+                <p>4ba</p>
+              </div>
+              <div class="info-details">
+                <img src="./images/SquareFeetIcon.svg" alt="s" />
+                <p>1,683 sqft</p>
+              </div>
+            </div>
+            <div class="address">
+              <p>0000 Mill Creek Rd,</p>
+              <p>Statesboro, GA 30461</p>
+            </div>
+            <div class="realtor">
+              <p>Gata Real Estate,MLS#20155727</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="footer">
-      <p class="center">Copyright 2023 Gata Real Estate</p>
+      <p>Copyright 2023 Gata Real Estate</p>
     </div>
     <script src="/src/App.js" async defer></script>
   </body>
