--- a/Public/index.html
+++ b/Public/index.html
@@ -57,23 +57,23 @@
         </p>
       </div>
       <div class="cards">
-        <div id="statesboro" class="card">
+        <a href="#header" id="statesboro" class="card">
           <div>
             <h3><b>Statesboro, GA</b></h3>
           </div>
-        </div>
-        <div id="atlanta" class="card">
+        </a>
+        <a id="atlanta" href="#header" class="card">
           <div>
             <h3><b>Atlanta, GA</b></h3>
           </div>
-        </div>
+        </a>
       </div>
     </div>
 
     <div id="recentHomes" class="container">
       <h2 class="">Newly listed homes in Statesboro</h2>
       <div class="cards">
-        <div id="house1" class="house-card">
+        <a href="#header" id="house1" class="house-card">
           <div class="card">
             <div>
               <h3><b>NEW - 2 DAYS AGO</b></h3>
@@ -105,8 +105,8 @@
               <p>Gata Real Estate,MLS#20155727</p>
             </div>
           </div>
-        </div>
-        <div id="house2" class="house-card">
+        </a>
+        <a href="#header" id="house2" class="house-card">
           <div class="card">
             <div>
               <h3><b>NEW - 4 HRS AGO</b></h3>
@@ -138,7 +138,7 @@
               <p>Gata Real Estate,MLS#20155727</p>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
 
