Reactified the website

--- a/Public/index.html
+++ b/Public/index.html
@@ -1,3 +1,5 @@
+<!--TODO Reactify this thing-->
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -32,8 +34,8 @@
     </div>
 
     <div id="splash" class="container">
-      <h1 class="title child">Welcome to the future of home buying</h1>
-      <div class="search-buttons child">
+      <h1 class="title">Welcome to the future of home buying</h1>
+      <div class="search-buttons">
         <div class="button">
           <a href="#buy">Buy</a>
         </div>
@@ -49,7 +51,7 @@
 
     <div id="cityCards" class="container">
       <div class="container">
-        <h2 class="">Explore homes on Gata Real Estate</h2>
+        <h2>Explore homes on Gata Real Estate</h2>
         <p>
           Browse homes for sale or rent, original photos of the homes, resident
           reviews, and immersive 3D and Virtual Reality views to find the
